--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -51,6 +51,10 @@ body {
       top: 110px;
       width: 25px;
 
+      @media screen and (max-width: 992px){
+        display: none;
+      }
+
       &__step {
         height: 110px;
         border-top: 2px solid #F9F9FB;
